inizializzato componente footer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,10 +3,14 @@
    --main-light-color: #f8f7f7;
    --secondary-color: #f4a261 ;
    --tertiary-color: #2a9d8f;
+   --accent-color: #e9c46a;
 }
 
 .text-main-color{
   color: var(--main-color);
+}
+.bg-main-color{
+  background-color: var(--main-color);
 }
 
 .text-main-light-color{
@@ -99,6 +103,10 @@ body{
     color: var(--main-light-color);
   }
 
+  /* FINE CSS CARD */
+
+  /* INIZIO CSS BUTTON */
+
   .btn-category-custom{
     background-color: var(--secondary-color);
     width: 80%;
@@ -109,7 +117,11 @@ body{
     width: 80%;
   }
 
-  /* FINE CSS CARD */
+  .btn-become-revisor-custom{
+    background-color: var(--accent-color);
+  }
+
+  /* FINE CSS BUTTON */
 
   /* INIZIO CSS CAROUSEL */
 
@@ -122,3 +134,8 @@ body{
   /* FINE CSS CAROUSEL */
 
   
+  /* INIZIO CSS FOOTER */
+
+
+
+  /* FINE CSS FOOTER */
